build(makefile): optimize lint and test to support monorepo

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,6 +18,8 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: stable
+          check-latest: true
+          cache-dependency-path: "**/go.sum"
 
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6
+      - name: Run linters
+      - run: make lint
