build(makefile): optimize lint and test to support monorepo

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,4 +22,4 @@ jobs:
           cache-dependency-path: "**/go.sum"
 
       - name: Run linters
-        run: make lint test-coverage
+        run: make lint
