--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
       - run: go version
 
       - name: Run tests
-        run: make test
+        run: make test test-coverage
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
