--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,8 +18,6 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: stable
-          check-latest: true
-          cache-dependency-path: "**/go.sum"
 
-      - name: Run linters
-        run: make lint
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v6
