--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,12 +26,10 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
-          check-latest: true
-          cache-dependency-path: "**/go.sum"
       - run: go version
 
       - name: Run tests
-        run: make test test-coverage
+        run: go test ./... -v -covermode=atomic -race -coverprofile=coverage.txt
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
