--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,7 @@ jobs:
 
     services:
       redis:
+        if: ${{ matrix.platform == 'ubuntu-latest' }}
         image: redis
         options: >-
           --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5
