--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,12 +15,11 @@ jobs:
     strategy:
       matrix:
         go-version: [ 1.22.x, 1.23.x ]
-        platform: [ ubuntu-latest, macos-latest ]
+        platform: [ ubuntu-latest ]
     runs-on: ${{ matrix.platform }}
 
     services:
       redis:
-        if: ${{ runner.os == 'Linux' }}
         image: redis
         options: >-
           --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5
