build(renovate): update config

--- a/renovate.json
+++ b/renovate.json
@@ -1,12 +1,18 @@
 {
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "config:recommended"
+  ],
+  "labels": ["dependencies"],
+  "separateMajorMinor": true,
+  "postUpdateOptions": ["gomodTidy"],
+  "constraints": {
+    "go": "1.22.0"
+  },
   "packageRules": [
     {
-      "matchManagers": [
-        "gomod"
-      ],
-      "matchDepTypes": [
-        "indirect"
-      ],
+      "matchManagers": ["gomod"],
+      "matchDepTypes": ["indirect"],
       "enabled": true
     }
   ]
