--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,5 +19,5 @@ jobs:
         with:
           go-version: stable
 
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6
+      - name: Run lint
+        run: make lint
