--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+coverage.*
 
 # Dependency directories (remove the comment below to include it)
 vendor/
@@ -20,4 +21,3 @@ _backup
 .todo
 _example
 .tools
-coverage.txt
