--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+coverage.*
 
 # Dependency directories (remove the comment below to include it)
 vendor/
@@ -19,3 +20,4 @@ go.work.sum
 _backup
 .todo
 _example
+.tools
