--- a/renovate.json
+++ b/renovate.json
@@ -14,6 +14,13 @@
       "matchManagers": ["gomod"],
       "matchDepTypes": ["indirect"],
       "enabled": true
+    },
+    {
+      "matchFilesNames": ["internal/tools/**"],
+      "constraints": {
+        "go": "1.22.10"
+      },
+      "enabled": true
     }
   ]
 }
