--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,3 +31,9 @@ jobs:
 
       - name: Run lint
         run: make lint
+
+      - name: Build
+        run: make build
+
+      - name: Check clean repository
+        run: make check-clean-work-tree
