--- a/versions.yaml
+++ b/versions.yaml
@@ -1,14 +1,20 @@
 module-sets:
   stable-v4:
-    version: v4.3.2
+    version: v4.4.0
     modules:
+      # Core modules
       - github.com/flc1125/go-cron/v4
-      - github.com/flc1125/go-cron/crontest/v4
+
+      # Middleware modules
       - github.com/flc1125/go-cron/middleware/delayoverlapping/v4
       - github.com/flc1125/go-cron/middleware/distributednooverlapping/v4
       - github.com/flc1125/go-cron/middleware/distributednooverlapping/redismutex/v4
       - github.com/flc1125/go-cron/middleware/nooverlapping/v4
       - github.com/flc1125/go-cron/middleware/otel/v4
       - github.com/flc1125/go-cron/middleware/recovery/v4
+
+      # Test modules
+      - github.com/flc1125/go-cron/crontest/v4
+      - github.com/flc1125/go-cron/tests/v4
 excluded-modules:
   - github.com/flc1125/go-cron/v4/internal/tools
